--- a/gateway/src/main/resources/messages.properties
+++ b/gateway/src/main/resources/messages.properties
@@ -108,7 +108,7 @@ welcome=Welcome to our Website!
 description=We are the best company that check your tax reports.We have high-educated inspectors who do their job quickly.
 
 apply=Apply
-
+client.id=Client id
 
 
 
